[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.1"
color-eyre = "0.6.2"
crossterm = "*"
id_tree = "1.8.0"
itertools = "0.10.5"
miette = { version = "5.5.0", features = ["fancy"] }
nom = "7.1.1"
nom-supreme = "0.8.0"
nom_locate = "4.0.0"
pico-args = "0.5.0"
regex = "1.7.0"
thiserror = "1.0.37"
tui = "0.19.0"
